auth_app blocked user invalid message added. customer user management completed- added pagination

--- a/glamyze/static/assets/css/custom.css
+++ b/glamyze/static/assets/css/custom.css
@@ -42,3 +42,12 @@
     background-color: #333 !important;
     border-color: #333 !important;
 }
+.btn-outline-primary{
+    color: #000;
+    border-color: #000 !important;
+    background-color: #fff !important; 
+}
+.btn-outline-primary:hover {
+    background-color: #333 !important;
+    border-color: #333 !important;
+}
