category management completed.

--- a/glamyze/templates/admin/base.html
+++ b/glamyze/templates/admin/base.html
@@ -74,7 +74,7 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/hello" aria-expanded="false">
+                <a class="sidebar-link" href="{%url 'category_management:category_view' %}" aria-expanded="false">
                     <span><i class="ti ti-category"></i></span>
                     <span class="hide-menu">Categories</span>
                 </a>
