product management completed

--- a/glamyze/templates/admin/base.html
+++ b/glamyze/templates/admin/base.html
@@ -62,7 +62,7 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/hello" aria-expanded="false">
+                <a class="sidebar-link" href="{% url 'product_management:product_details' %}" aria-expanded="false">
                     <span><i class="ti ti-shopping-cart"></i></span>
                     <span class="hide-menu">Products</span>
                 </a>
@@ -98,7 +98,6 @@
                 </a>
             </li>
           </ul>
-         
         </nav>
         <!-- End Sidebar navigation -->
       </div>
