--- a/glamyze/templates/admin/customer.html
+++ b/glamyze/templates/admin/customer.html
@@ -3,7 +3,7 @@
 <nav aria-label="breadcrumb" class="px-4">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{% url 'admin_app:admin_dashboard' %}">Admin</a></li>
-      <li class="breadcrumb-item"><a href="{% url 'customer_management:customer_details' %}">Customers</a></li>
+      <li class="breadcrumb-item">Customers</li>
     </ol>
 </nav>
 {% endblock breadcrumbs %}
