--- a/glamyze/templates/auth_app/signup.html
+++ b/glamyze/templates/auth_app/signup.html
@@ -38,13 +38,6 @@
                             <form method="POST" action="">
                                 {% csrf_token %}
                                 
-                                {% if messages %}
-                                <div class="alert alert-danger">
-                                    {% for message in messages %}
-                                        {{ message }}
-                                    {% endfor %}
-                                </div>
-                                {% endif %}
                                 <div class="form-group">
                                     <label for="fname">First name</label>
                                     <input type="text" class="form-control form-control-lg" id="fname" name="fname" value="{{first_name}}" required>
@@ -99,6 +92,24 @@
     </div>
 
     <!-- Scripts -->
+ <script>
+    // Check if signup success is passed as context
+    {% if account_exists %}
+    document.addEventListener("DOMContentLoaded", function() {
+        Swal.fire({
+            title: 'Account exists!',
+            text: 'Account with this email id already exists.',
+            icon: 'danger',
+            confirmButtonText: 'OK'
+        }).then(() => {
+            window.location.href = "{% url 'auth_app:login' %}";
+        });
+    });
+    {% endif %}
+</script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
