--- a/glamyze/templates/admin/customer.html
+++ b/glamyze/templates/admin/customer.html
@@ -48,15 +48,32 @@
                 {% endfor %}
             </tbody>
         </table>
-        <nav aria-label="Page navigation example">
-            <ul class="pagination">
-          
-              {% for i in customer_data.paginator.page_range %}
-              <li class="page-item"><a class="page-link" href="?page={{i}}&searchvalue={{searchvalue}}">{{i}}</a></li>
-              {% endfor %}
-             
-            </ul>
-          </nav>
+        <div class='d-flex justify-content w-100'>
+        <nav aria-label="Page navigation">
+    <ul class="pagination">
+        <!-- Previous button -->
+        <li class="page-item {% if customer_data.number == 1 %}disabled{% endif %}">
+            <a class="page-link" href="{% if customer_data.number != 1 %}?page={{ customer_data.number|add:'-1' }}&searchvalue={{searchvalue}}{% else %}#{% endif %}" {% if customer_data.number == 1 %}tabindex="-1" aria-disabled="true"{% endif %}>
+                Previous
+            </a>
+        </li>
+
+        <!-- Page numbers -->
+        {% for i in customer_data.paginator.page_range %}
+            <li class="page-item {% if customer_data.number == i %}active{% endif %}" {% if customer_data.number == i %}aria-current="page"{% endif %}>
+                <a class="page-link" href="?page={{i}}&searchvalue={{searchvalue}}">{{i}}</a>
+            </li>
+        {% endfor %}
+
+        <!-- Next button -->
+        <li class="page-item {% if customer_data.number == customer_data.paginator.num_pages %}disabled{% endif %}">
+            <a class="page-link" href="{% if customer_data.number != customer_data.paginator.num_pages %}?page={{ customer_data.number|add:'1' }}&searchvalue={{searchvalue}}{% else %}#{% endif %}" {% if customer_data.number == customer_data.paginator.num_pages %}tabindex="-1" aria-disabled="true"{% endif %}>
+                Next
+            </a>
+        </li>
+    </ul>
+</nav>
+</div>
     </div>
 </div>
 
