--- a/glamyze/templates/admin/productsize.html
+++ b/glamyze/templates/admin/productsize.html
@@ -56,7 +56,7 @@
             {% for product_varient in product_varients %}
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon3">{{ product_varient.size.size_name }}</span>
-                <input type="text" name="{{product_varient.size.id}}" class="form-control" id="basic-url" aria-describedby="basic-addon3" placeholder="Enter the quantity">
+                <input type="number" name="{{product_varient.size.id}}" class="form-control" id="basic-url" aria-describedby="basic-addon3" required placeholder="Enter the quantity">
             </div>
             {% endfor %}
             <div class="col-12">
