--- a/glamyze/templates/auth_app/login.html
+++ b/glamyze/templates/auth_app/login.html
@@ -39,13 +39,7 @@
                             <form method="POST" action=" ">
                                 {% csrf_token %}
                                 
-                                {% if messages %}
-                                <div class="alert alert-success">
-                                    {% for message in messages %}
-                                        {{ message }}
-                                    {% endfor %}
-                                </div>
-                                {% endif %}
+                                
 
                                 <div class="form-group">
                                     <label for="email">Email address</label>
@@ -57,12 +51,7 @@
                                     <input type="password" class="form-control form-control-lg" id="password" name="password" required>
                                 </div>
 
-                                <div class="form-group">
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="remember" name="remember">
-                                        <label class="custom-control-label" for="remember">Remember me</label>
-                                    </div>
-                                </div>
+                               
 
                                 <button type="submit" class="btn btn-dark btn-block btn-lg mb-4">LOGIN</button>
                                 {% if error %}
@@ -81,7 +70,7 @@
 
                                 <!-- Footer Links -->
                                 <div class="text-center">
-                                    <a href=" " class="text-dark d-block mb-3">Forgot Password?</a>
+                                    <a href="{% url 'auth_app:forgot_password' %}" class="text-dark d-block mb-3">Forgot Password?</a>
                                     <p class="mb-0">Don't have an account? <a href="{% url 'auth_app:signup' %} " class="text-dark font-weight-bold">Sign up</a></p>
                                 </div>
                             </form>
