Error in the case of login using email id used for Google sign in handled

--- a/glamyze/templates/admin/base.html
+++ b/glamyze/templates/admin/base.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Modernize Free</title>
-  <link rel="shortcut icon" type="image/png" href="{% static 'assets/images/logos/favicon.png' %}" />
+  <title>Glamyze</title>
+  <link rel="shortcut icon" type="image/png" href="" />
   <link rel="stylesheet" href="{% static 'assets/css/styles.min.css' %}" />
   <link rel="stylesheet" href="{% static 'assets/css/custom.css' %}">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
