--- a/glamyze/templates/auth_app/forgotpassword_otp.html
+++ b/glamyze/templates/auth_app/forgotpassword_otp.html
@@ -5,7 +5,7 @@
     <title>Enter OTP</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="{% static 'images/icons/favicon.png' %}"/>
+    <link rel="icon" type="image/png" href=""/>
     <link rel="stylesheet" type="text/css" href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
     <style>
@@ -38,13 +38,7 @@
                             <form method="POST">
                                 {% csrf_token %}
                                 
-                                {% if messages %}
-                                <div class="alert alert-danger">
-                                    {% for message in messages %}
-                                        {{ message }}
-                                    {% endfor %}
-                                </div>
-                                {% endif %}
+                             
 
                                 <div class="form-group">
                                     <label for="otp">Enter OTP</label>
